--- a/urbanstory/src/css/sass/components-global/_avatar.scss
+++ b/urbanstory/src/css/sass/components-global/_avatar.scss
@@ -27,43 +27,43 @@
     right: 0;
     bottom: 0;
     margin: auto;
-    font-size: (12/16) + rem;
+    font-size: $font-xs;
     line-height: 2rem;
     color: black;
     color: $c-grey-3;
   }
-  &.is-sm {
+  &-small {
     width: 48px;
     height: 48px;
     span {
-      font-size: 1rem;
+      font-size: $font-s;
     }
   }
-  &.is-md {
+  &-medium {
     width: 64px;
     height: 64px;
     span {
-      font-size: 1.5rem;
+      font-size: $font-m;
     }
   }
-  &.is-lg {
+  &-large {
     width: 96px;
     height: 96px;
     span {
-      font-size: 2rem;
+      font-size: $font-xl;
     }
   }
-  &.is-xl {
+  &-extra-large {
     width: 128px;
     height: 128px;
     span {
-      font-size: 2rem;
+      font-size: $font-xxl;
     }
   }
-  &.is-square {
+  &-square {
     @include border-radius(0);
   }
-  &.is-o {
+  &-circle {
     @include box-shadow(0 0 0 2px white);
   }
 }
