--- a/urbanstory/src/css/sass/global/_variables.scss
+++ b/urbanstory/src/css/sass/global/_variables.scss
@@ -71,6 +71,7 @@ $font-stack: 'Source Sans Pro', sans-serif;
 $font-icon: urbanfont;
 
 //font sizes
+$font-xxl: (32/16)+em;
 $font-xl: (24/16)+em;
 $font-l: (18/16)+em;
 $font-m: (16/16)+em;
