--- a/urbanstory/pages/components/list.html
+++ b/urbanstory/pages/components/list.html
@@ -57,7 +57,7 @@
         font-family: $font-icon;
         min-width: $c-height;
         height: $c-height;
-        content: "\E01D";
+        content: "\E021";
         visibility: hidden;
         color: $c-firm-1;
         }
