--- a/urbanstory/src/css/sass/global/_variables.scss
+++ b/urbanstory/src/css/sass/global/_variables.scss
@@ -68,7 +68,7 @@ $gutter-s: 4px;
 // font family
 $font-heading: "Barlow", Arial, sans-serif;
 $font-stack: 'Source Sans Pro', sans-serif;
-$font-icon: urbanfont;
+$font-icon: urbanicon!important;
 
 //font sizes
 $font-xxl: (32/16)+em;
