--- a/urbanstory/src/css/urbanstory.css
+++ b/urbanstory/src/css/urbanstory.css
@@ -232,6 +232,10 @@ dl dd {
   transition: cubic-bezier(0.11, 0.65, 0.73, 0.66), 0.2s;
 }
 
+.full-width {
+  width: 100%;
+}
+
 .uh-btn {
   background-color: #f5f5f5;
   font-size: 0.875em;
