--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -372,6 +372,11 @@ pre[class*=language-] {
 .uh-btn [class*=" icon-"]:before, .uh-btn [class^=icon-]:before, .uh-btn [data-icon]:before {
   vertical-align: middle !important;
 }
+.uh-btn .text-center {
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
 
 .uh-btn-prime {
   background-color: #33beef;
