--- a/urbanstory/src/css/urbanstory.css
+++ b/urbanstory/src/css/urbanstory.css
@@ -265,6 +265,11 @@ dl dd {
 .uh-btn [class*=" icon-"]:before, .uh-btn [class^=icon-]:before, .uh-btn [data-icon]:before {
   vertical-align: middle !important;
 }
+.uh-btn .text-center {
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
 
 .uh-btn-prime {
   background-color: #33beef;
