update btn center

--- a/urbanstory/src/css/sass/components-global/_button.scss
+++ b/urbanstory/src/css/sass/components-global/_button.scss
@@ -23,7 +23,7 @@
     [class*=" icon-"]:before, [class^=icon-]:before, [data-icon]:before {
         vertical-align: middle !important;
     }
-    .text-center {
+    &.text-center {
         @include justify-content(center);
     }
 }
