--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -6,6 +6,8 @@
 
 // library
 @import "../global/_variables";
+@import "../global/color-variables";
+@import "../global/color-classes";
 @import "../global/_mixin";
 
 // global css
